added main skeleton

--- a/index.html
+++ b/index.html
@@ -9,7 +9,46 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <h1>Hello World!, we are software developers!</h1>
-
     <script  src="js/index.js"></script>
+    <div id="title-header">
+      <h1>PAGE TITLE</h1>
+    </div>
+
+
+    <main id="main-doc">
+      <section class="main-section" id="introduction">
+        <header>
+          <h2>TITLE</h2>
+        </header>
+
+      </section>
+      <section class="main-section" id="introduction_2">
+        <header>
+
+        </header>
+      </section>
+      <section class="main-section" id="introduction_3">
+        <header>
+
+        </header>
+      </section>
+      <section class="main-section" id="introduction_4">
+        <header>
+
+        </header>
+      </section>
+      <section class="main-section" id="introduction_5">
+        <header>
+
+        </header>
+      </section>
+    </main>
+
+    <nav id="navbar">
+      <header>
+
+      </header>
+      <a class="nav-link" href="#introduction"></a>
+    </nav>
   </body>
 </html>
