--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Karla and Lucas - Microverse trials</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <h1>Hello World!, we are software developers!</h1>
+    <!-- <h1>Hello World!, we are software developers!</h1> -->
     <script  src="js/index.js"></script>
     <div id="title-header">
       <h1>PAGE TITLE</h1>
     </div>
-
 
     <main id="main-doc">
       <section class="main-section" id="introduction">
@@ -46,9 +45,12 @@
 
     <nav id="navbar">
       <header>
-
+        <h2>Navbar Title</h2>
       </header>
       <a class="nav-link" href="#introduction"></a>
+      <a class="nav-link" href=""></a>
+      <a class="nav-link" href=""></a>
+      <a class="nav-link" href=""></a>
     </nav>
   </body>
 </html>
