--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -18,35 +19,75 @@
     <main id="main-doc">
       <section class="main-section" id="introduction">
         <header>
-          <h2>TITLE</h2>
+          <h2>Built-ins</h2>
         </header>
 
       </section>
       <section class="main-section" id="introduction_2">
         <header>
-
+          <h2>Value properties</h2>
         </header>
+        <ul>
+      
+        </ul>
       </section>
       <section class="main-section" id="introduction_3">
         <header>
-
+          <h2>Function properties</h2>
         </header>
       </section>
       <section class="main-section" id="introduction_4">
         <header>
-
+          <h2>Fundamental objects</h2>
         </header>
       </section>
       <section class="main-section" id="introduction_5">
         <header>
-
+          <h2>Error objects</h2>
         </header>
       </section>
+      <section class="main-section" id="introduction_5">
+        <header>
+          <h2>Numbers & dates</h2>
+        </header>
+      </section>
+      <section class="main-section" id="introduction_5">
+        <header>
+          <h2>Text processing</h2>
+        </header>
+      </section>
+      <section class="main-section" id="introduction_5">
+        <header>
+          <h2>Indexed Collections</h2>
+        </header>
+      </section>
+      <section class="main-section" id="introduction_5">
+        <header>
+          <h2>Keyed collections</h2>
+        </header>
+      </section>
+      <section class="main-section" id="introduction_5">
+        <header>
+          <h2>Structured data</h2>
+        </header>
+      </section>
+      <section class="main-section" id="introduction_5">
+        <header>
+          <h2>Declarations</h2>
+        </header>
+      </section>
+      <section class="main-section" id="introduction_5">
+        <header>
+          <h2>Other</h2>
+        </header>
+      </section>
+
+    
     </main>
 
     <nav id="navbar">
       <header>
-
+        <h2>JS Documents</h2>
       </header>
       <a class="nav-link" href="#introduction"></a>
     </nav>
