Added listed links to content

--- a/index.html
+++ b/index.html
@@ -27,33 +27,73 @@
           <h2>Value properties</h2>
         </header>
         <ul>
-      
+          <li><a href="#">globalThis</a></li>
+          <li><a href="#">Infinity</a></li>
+          <li><a href="#">NaN</a></li>
+          <li><a href="#">undefined</a></li>
         </ul>
       </section>
       <section class="main-section" id="introduction_3">
         <header>
           <h2>Function properties</h2>
         </header>
+        <ul>
+          <li><a href="#">eval()</a></li>
+          <li><a href="#">isFinite()</a></li>
+          <li><a href="#">isNaN()</a></li>
+          <li><a href="#">parseFloat()</a></li>
+          <li><a href="#">parseInt()</a></li>
+          <li><a href="#">decodeURI()</a></li>
+          <li><a href="#">decodeURIComponent()</a></li>
+          <li><a href="#">encodeURI()</a></li>
+          <li><a href="#">encodeURIComponent()</a></li>
+        </ul>
       </section>
       <section class="main-section" id="introduction_4">
         <header>
           <h2>Fundamental objects</h2>
         </header>
+        <ul>
+          <li><a href="#">Object</a></li>
+          <li><a href="#">Function</a></li>
+          <li><a href="#">Boolean</a></li>
+          <li><a href="#">Symbol</a></li>
+        </ul>
       </section>
       <section class="main-section" id="introduction_5">
         <header>
           <h2>Error objects</h2>
         </header>
+        <ul>
+          <li><a href="#">Error</a></li>
+          <li><a href="#">EvalError</a></li>
+          <li><a href="#">RangeError</a></li>
+          <li><a href="#">ReferenceError</a></li>
+          <li><a href="#">SyntaxError</a></li>
+          <li><a href="#">TypeError</a></li>
+          <li><a href="#">URIError</a></li>
+          <li><a href="#">AggregateError</a></li>
+        </ul>  
       </section>
       <section class="main-section" id="introduction_5">
         <header>
           <h2>Numbers & dates</h2>
         </header>
+        <ul>
+          <li><a href="#">Number</a></li>
+          <li><a href="#">BigInt</a></li>
+          <li><a href="#">Math</a></li>
+          <li><a href="#">Date</a></li>
+        </ul>
       </section>
       <section class="main-section" id="introduction_5">
         <header>
           <h2>Text processing</h2>
         </header>
+        <ul>
+          <li><a href="#">String</a></li>
+          <li><a href="#">RegExp</a></li>
+        </ul>
       </section>
       <section class="main-section" id="introduction_5">
         <header>
