--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Source Code Pro' rel='stylesheet'> 
   </head>
 
   <body>
@@ -12,8 +13,17 @@
     <!-- <h1>Hello World!, we are software developers!</h1> -->
     <script  src="js/index.js"></script>
     <div id="title-header">
-      <h1>PAGE TITLE</h1>
+      <h1>JavaScript reference</h1>
     </div>
+    <nav id="navbar">
+      <header>
+        <h2>Navbar Title</h2>
+      </header>
+      <a class="nav-link" href="#Built-ins">Built-ins</a>
+      <a class="nav-link" href=""></a>
+      <a class="nav-link" href=""></a>
+      <a class="nav-link" href=""></a>
+    </nav>
 
     <main id="main-doc">
       <section class="main-section" id="introduction">
@@ -280,15 +290,5 @@
 
     
     </main>
-
-    <nav id="navbar">
-      <header>
-        <h2>Navbar Title</h2>
-      </header>
-      <a class="nav-link" href="#introduction"></a>
-      <a class="nav-link" href=""></a>
-      <a class="nav-link" href=""></a>
-      <a class="nav-link" href=""></a>
-    </nav>
   </body>
 </html>
