--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         <h2>Navbar Title</h2>
       </header>
       <a class="nav-link" href="#Built-ins">Built-ins</a>
-      <a class="nav-link" href=""></a>
-      <a class="nav-link" href=""></a>
-      <a class="nav-link" href=""></a>
+      <a class="nav-link" href="#Value_properties"></a>
+      <a class="nav-link" href="#Function_properties"></a>
+      <a class="nav-link" href="#Fundamental_objects"></a>
+      <a class="nav-link" href="#Text_processing"></a>
     </nav>
     <main id="main-doc">
       <section class="main-section" id="Built_ins">
@@ -36,11 +37,11 @@
           <h2>Value properties</h2>
         </header>
         <ul>
-          <li><a href="#">globalThis</a></li>
+          <li><a href="#Value_properties">globalThis</a></li>
           <p>The global <code>globalThis</code> property contains the global <code>this</code> value, which is akin to the global object.</p>
-          <li><a href="#">Infinity</a></li>
+          <li><a href="#Value_properties">Infinity</a></li>
           <p>The global property <code>Infinity</code> is a numeric value representing infinity.</p>
-          <li><a href="#">NaN</a></li>
+          <li><a href="#Value_properties">NaN</a></li>
           <p>The global <code>NaN</code> property is a value representing Not-A-Number.</p>
           <h4>Example:</h4>
           <pre class="line-numbers">
@@ -59,7 +60,7 @@
             // expected output: NaN
           </code>
           </pre>
-          <li><a href="#">undefined</a></li>
+          <li><a href="#Value_properties">undefined</a></li>
           <p>The global <code>undefined</code> property represents the primitive value <a href="https://developer.mozilla.org/en-US/docs/Glossary/undefined">undefined</a>.</p>
         </ul>
       </section>
@@ -68,10 +69,10 @@
           <h2>Function properties</h2>
         </header>
         <ul>
-          <li><a href="#">eval()</a></li>
+          <li><a href="#Function_properties">eval()</a></li>
           <p>The eval() function evaluates JavaScript code represented as a string.</p>
           <code>Warning: Executing JavaScript from a string is an enormous security risk. It is far too easy for a bad actor to run arbitrary code when you use eval(). </code>
-          <li><a href="#">isFinite()</a></li>
+          <li><a href="#Function_properties">isFinite()</a></li>
           <p>The global <code>isFinite()</code> function determines whether the passed value is a finite number. If needed, the parameter is first converted to a number. </p>
           <h4>Example:</h4>
           <pre class="line-numbers">
@@ -90,7 +91,7 @@
             // expected output: "Number is NOT Infinity."
             </code>
             </pre>
-          <li><a href="#">isNaN()</a></li>
+          <li><a href="#Function_properties">isNaN()</a></li>
           <p>The <code>isNaN()</code> function determines whether a value is <a href="https://devdocs.io/javascript/global_objects/nan">NaN</a> or not.</p>
           <h4>Example:</h4>
           <pre class="line-numbers">
@@ -109,14 +110,14 @@
             // expected output: 3140
           </code>
           </pre>
-          <li><a href="#">parseFloat()</a></li>
+          <li><a href="#Function_properties">parseFloat()</a></li>
           <p>The <code>parseFloat()</code> function parses an argument (converting it to a string first if needed) and returns a floating point number. </p>
-          <li><a href="#">parseInt()</a></li>
+          <li><a href="#Function_properties">parseInt()</a></li>
           <p>The <code>parseInt()</code> function parses a string argument and returns an integer of the specified <a href="https://en.wikipedia.org/wiki/Radix">radix</a> (the base in mathematical numeral systems). </p>
-          <li><a href="#">decodeURI()</a></li>
+          <li><a href="#Function_properties">decodeURI()</a></li>
           <p>The <code>decodeURI()</code> function decodes a Uniform Resource Identifier (URI) previously created by encodeURI() or by a similar routine. </p>
 
-          <li><a href="#">encodeURI()</a></li>
+          <li><a href="#Function_properties">encodeURI()</a></li>
           <p>The <code>encodeURI()</code> function encodes a <a href="https://developer.mozilla.org/en-US/docs/Glossary/URI">URI</a>
             by replacing each instance of certain characters by one, two, three, or four escape sequences representing 
             the <a href="https://developer.mozilla.org/en-US/docs/Glossary/UTF-8">UTF-8</a> encoding of the character 
@@ -144,11 +145,11 @@
           <h2>Fundamental objects</h2>
         </header>
         <ul>
-          <li><a href="#">Object</a></li>
+          <li><a href="#Fundamental_objects">Object</a></li>
           <p>The Object class represents one of <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures">JavaScript's data types</a>. 
             It is used to store various keyed collections and more complex entities. Objects can be created using the <a href="https://devdocs.io/javascript/global_objects/object/object">Object()</a> 
             constructor or the <a href="https://devdocs.io/javascript/operators/object_initializer">object initializer / literal syntax</a>.</p>
-          <li><a href="#">Function</a></li>
+          <li><a href="#Fundamental_objects">Function</a></li>
           <p>Every JavaScript function is actually a <code>Function</code> object. This can be seen with the code <code>(function(){}).constructor === Function</code>, which returns true.</p>
           <li><a href="#">Boolean</a></li>
           <p>The <code>Boolean</code> object is an object wrapper for a boolean value.</p>
@@ -164,7 +165,7 @@
               // this code is not executed
             }
           </code></pre>
-          <li><a href="#">Symbol</a></li>
+          <li><a href="#Fundamental_objects">Symbol</a></li>
           <p><code>Symbol</code> is a built-in object whose constructor returns a <code>symbol</code> <a href="https://developer.mozilla.org/en-US/docs/Glossary/Primitive">primitive</a> — also called a Symbol value or just a Symbol — that's guaranteed to be unique. 
             Symbols are often used to add unique property keys to an object that won't collide with keys any other code might add to the object, and which are hidden from any mechanisms other code will typically use to access the object.
              That enables a form of weak <a href="https://developer.mozilla.org/en-US/docs/Glossary/Encapsulation">encapsulation</a>, or a weak form of <a href="https://en.wikipedia.org/wiki/Information_hiding">information hiding</a>.</p>
@@ -178,7 +179,7 @@
           <h2>Text processing</h2>
         </header>
         <ul>
-          <li><a href="#">String</a></li>
+          <li><a href="#Text_processing">String</a></li>
           <p>The <code>String</code> object is used to represent and manipulate a sequence of characters. </p>
           <h4>Creating strings:</h4>
           <p>Strings can be created as primitives, from string literals, or as objects, using the <a href="https://devdocs.io/javascript/global_objects/string/string">String()</a> constructor: </p>
@@ -190,7 +191,7 @@
             const string4 = new String("A String object");
             </code>
             </pre>
-          <li><a href="#">RegExp</a></li>
+          <li><a href="#Text_processing">RegExp</a></li>
           <p>The <code>RegExp</code> object is used for matching text with a pattern.</p>
           <p>There are two ways to create a RegExp object: a literal notation and a constructor.</p>
 <ul>    <li>The literal notation's parameters are enclosed between slashes and do not use quotation marks.</li>
@@ -205,10 +206,9 @@ let re = new RegExp(/ab+c/, 'i') // constructor with regular expression literal 
         </ul>
       </section>
 
-    
     </main>
-<footer>
+<div id="footer">
   Information obtained from <a href="https://devdocs.io/javascript/">this documentation</a>
-</footer>
+</div>
   </body>
 </html>
