changed footer color

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h2>Navbar Title</h2>
       </header>
       <a class="nav-link" href="#Built-ins">Built-ins</a>
-      <a class="nav-link" href="#Value_properties"></a>
-      <a class="nav-link" href="#Function_properties"></a>
+      <a class="nav-link" href="#Value_properties">dsadsa</a>
+      <a class="nav-link" href="#Function_properties">dsadsda</a>
       <a class="nav-link" href="#Fundamental_objects"></a>
       <a class="nav-link" href="#Text_processing"></a>
     </nav>
