Added subtitle class to section headers

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     </nav>
     <main id="main-doc">
       <section class="main-section" id="Built_ins">
-        <header>
+        <header class="subtitle">
           <h2>Built-ins</h2>
         </header>
 
       </section>
       <section class="main-section" id="Value_properties">
-        <header>
+        <header class="subtitle">
           <h2>Value properties</h2>
         </header>
         <ul>
@@ -66,7 +66,7 @@
         </ul>
       </section>
       <section class="main-section" id="Function_properties">
-        <header>
+        <header class="subtitle">
           <h2>Function properties</h2>
         </header>
         <ul>
