added subtitle classes

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </ul>
       </section>
       <section class="main-section" id="Fundamental_objects">
-        <header>
+        <header class="subtitle">
           <h2>Fundamental objects</h2>
         </header>
         <ul>
@@ -176,7 +176,7 @@
 
 
       <section class="main-section" id="Text_processing">
-        <header>
+        <header class="subtitle">
           <h2>Text processing</h2>
         </header>
         <ul>
